--- a/index.html
+++ b/index.html
@@ -1,16 +1,155 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<head>
+	<!--Let browser know website is optimized for mobile-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<title>Art Event</title>
+	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" href="assets/css/index.css">
+</head>
+<body>
+	<header>
+		<nav class="navbar navbar-expand-md navbar-fixed-top navbar-dark bg-dark main-nav">
+			<a class="navbar-brand w-25" href="#">
+				<img src="assets/images/logo.png" width="30" height="30" class="d-inline-block align-top">
+			Bootstrap
+			</a>
+			<button class="navbar-toggler collapsed justify-content-end" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<ul class="nav navbar-nav ml-auto justify-content-center" id="search_field">
+				<form class="form-inline" style="width: 100% !important;">
+					<input type="password" class="form-control" id="" placeholder="Search" style="width: 75% !important;">
+					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				</form>
+			</ul>			
+			<div class="navbar-collapse collapse" id="navbarCollapse">
+				<ul class="nav navbar-nav ml-auto w-100 justify-content-end">
+					<li class="nav-item">
+						<a class="nav-link" href="#">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Disabled</a>
+					</li>
+				</ul>
+			</div>			
+		</nav>
+	</header>
+	<main>
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col nopadding">
+					<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+						<ol class="carousel-indicators">
+							<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+							<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+						</ol>
+						<div class="carousel-inner">
+							<div class="carousel-item active">
+								<img class="d-block w-100" src="assets/images/1000x400.png" alt="First slide">
+								<div class="carousel-caption d-none d-md-block">
+									<h3>Event Name</h3>
+									<p>Event Desc</p>
+									<a class="btn btn-primary">Know More</a>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-100" src="assets/images/1000x400.png" alt="Second slide">
+								<div class="carousel-caption d-none d-md-block">
+									<h3>Event Name</h3>
+									<p>Event Desc</p>
+									<a class="btn btn-primary">Know More</a>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-100" src="assets/images/1000x400.png" alt="Third slide">
+								<div class="carousel-caption d-none d-md-block">
+									<h3>Event Name</h3>
+									<p>Event Desc</p>
+									<a class="btn btn-primary">Know More</a>
+								</div>
+							</div>
+						</div>
+						<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							<span class="sr-only">Previous</span>
+						</a>
+						<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+							<span class="carousel-control-next-icon" aria-hidden="true"></span>
+							<span class="sr-only">Next</span>
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="row justify-content-md-center" id="featured_events">
+				<div class="col-md-auto justify-content-center" align="center">
+					<h1>Featured Events</h1>
+				</div>
+			</div>
+			<div class="row card-holder">
+				<div class="col-sm-12 col-md-6 col-lg-3">
+					<div class="card h-100">
+						<div class="card-header">
+							<h4>Event Name</h4>
+						</div>
+						<div class="card-body">
+							<p class="card-text" style="text-align: justify;">With supporting text below as a natural lead-in to additional content.</p>
+						</div>
+						<div class="card-footer" align="center">
+							<a href="#" class="btn btn-primary">Know More</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-12 col-lg-3">
+					<div class="card h-100">
+						<div class="card-header">
+							<h4>Event Name</h4>
+						</div>
+						<div class="card-body">
+							<p class="card-text" style="text-align: justify;">With supporting text below as a natural lead-in to additional content. With supporting text below as a natural lead-in to additional content. With supporting text below as a natural lead-in to additional content.</p>
+						</div>
+						<div class="card-footer" align="center">
+							<a href="#" class="btn btn-primary">Know More</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row" id="all_events">
+				<div class="col-md-3 desktop-only">
+					asdasd
+				</div>
+				<div class="col-md-9 col-sm-12">
+					<ul class="nav nav-pills nav-justified" role="tablist">
+						<li class="nav-item">
+							<a class="nav-link active" href="#all" data-toggle="tab">All Event</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#img" data-toggle="tab">Image</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#quiz" data-toggle="tab">Quiz</a>
+						</li>
+					</ul>
+					<div class="tab-content">
+						<div role="tabpanel" class="tab-pane fade in active show" id="all">asasdasd</div>
+						<div role="tabpanel" class="tab-pane fade" id="img">bbb</div>
+						<div role="tabpanel" class="tab-pane fade" id="quiz">ccc</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
+	<!-- FOOTER -->
+	<footer class="container">
+		<p class="float-right"><a href="#">Back to top</a></p>
+	</footer>
 
-    <title>Art Event</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
-  </head>
-  <body>
-
-    <script type="text/javascript" src="assets/js/jquery.js"></script>
-    <script type="text/javascript" src="assets/bootstrap/js/bootstrap.js"></script>
-    <script type="text/javascript" src="assets/js/index.js"></script>
-  </body>
+	<script type="text/javascript" src="assets/jquery/jquery.js"></script>
+	<script type="text/javascript" src="assets/bootstrap/js/bootstrap.js"></script>
+	<script type="text/javascript" src="assets/js/index.js"></script>
+</body>
 </html>
