--- a/index.html
+++ b/index.html
@@ -14,18 +14,7 @@
 		<link href="assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
 		<link href="assets/css/carousel.css" rel="stylesheet">
-		<style type="text/css">
-			.navbar-brand {
-				padding: 0px;
-				display: flex;
-				align-items: center;
-			}
-			.navbar-brand>img {
-				height: 50px;
-				width: 65px;
-				padding: 7px 14px;
-			}
-		</style>
+		<link href="assets/css/index.css" rel="stylesheet">
 	</head>
 <!-- NAVBAR
 ================================================== -->
@@ -44,17 +33,23 @@
 						Project name
 					</a>
 				</div>
-				<div id="navbar" class="navbar-collapse collapse">
-					<ul class="nav navbar-nav navbar-center">
-						<form class="form-inline" style="width: 100% !important;">
-							<input type="password" class="form-control" id="" placeholder="Search" style="width: 75% !important;">
-							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				<ul class="nav navbar-nav navbar-center">
+					<li style="width: 100% !important;">
+						<form class="navbar-form" role="search">
+							<div class="input-group" style="width: 100% !important;">
+								<input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+								<div class="input-group-btn">
+									<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+								</div>
+							</div>
 						</form>
-					</ul>
+					</li>
+				</ul>				
+				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="">Default</a></li>
 						<li><a href="">Static top</a></li>
-						<li class="active"><a href="">Fixed top</a></li>
+						<li><a href="">Fixed top</a></li>
 					</ul>
 				</div><!--/.nav-collapse -->
 			</div>
