--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 				</ul>				
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="">Default</a></li>
-						<li><a href="">Static top</a></li>
-						<li><a href="">Fixed top</a></li>
+						<li><a href="#!/events">Events</a></li>
+						<li><a href="">Login</a></li>
+						<li><a href="">Profile</a></li>
 					</ul>
 				</div><!--/.nav-collapse -->
 			</div>
