Added routing with paramenters in angularRouting

--- a/pages/event.html
+++ b/pages/event.html
@@ -1,13 +1,26 @@
 <div class="content">
-	<hr class="featurette-divider">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12" align="center">
-				<h2>Featured Events</h2>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-12 col-sm-3">
+			<div class="col-xs-12 col-sm-12">
+				<!--Card content-->
+				<div class="card">
+					<div class="card-body text-center">
+						<br>
+						<!--Title-->
+						<h4 class="card-title"><strong>My adventure</strong></h4>
+						<h5 class="indigo-text"><strong>Photography</strong></h5>
+						<p class="card-text">
+							Sed ut perspiciatis unde omnis iste natus sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+						</p>
+						<!--Linkedin-->
+						<a class="icons-sm li-ic"><i class="fa fa-linkedin"> </i></a>
+						<!--Twitter-->
+						<a class="icons-sm tw-ic"><i class="fa fa-twitter"> </i></a>
+						<!--Dribbble-->
+						<a class="icons-sm fb-ic"><i class="fa fa-facebook"> </i></a>
+					</div>
+				</div>
+				<!--/.Card content-->
 			</div>
 		</div>
 	</div>
