--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 		<link href="assets/css/carousel.css" rel="stylesheet">
 		<link href="assets/css/cards.css" rel="stylesheet">
 		<link href="assets/css/index.css" rel="stylesheet">
+		<style type="text/css">
+			.container{
+				width: 100% !important;
+			}
+		</style>
 	</head>
 	<body>
 	<!-- NAVBAR START -->
@@ -48,7 +53,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#!/events">Events</a></li>
 						<li><a href="">Login</a></li>
-						<li><a href="">Profile</a></li>
+						<li><a href="#!/profile">Profile</a></li>
 					</ul>
 				</div><!--/.nav-collapse -->
 			</div>
