--- a/pages/event.html
+++ b/pages/event.html
@@ -5,9 +5,9 @@
 				<!--Card content-->
 				<div class="card">
 					<div class="card-body text-center">
-						<br>
+						<br><br>
 						<!--Title-->
-						<h4 class="card-title"><strong>My adventure</strong></h4>
+						<h4 class="card-title">{{id}}<br><strong>Name</strong></h4>
 						<h5 class="indigo-text"><strong>Photography</strong></h5>
 						<p class="card-text">
 							Sed ut perspiciatis unde omnis iste natus sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
