--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,34 +1,33 @@
 <div class="container">
   <div class="row">
-    <h1>Event Name</h1>
-    <div class="row">
-      <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 1" data-toggle="modal" data-target="#myModal"><img src="//placehold.it/600x350" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 2"><img src="//placehold.it/600x350/2255EE" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 3"><img src="//placehold.it/600x350/449955/FFF" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 4"><img src="//placehold.it/600x350/992233" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 5"><img src="//placehold.it/600x350/2255EE" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 6"><img src="//placehold.it/600x350/449955/FFF" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 8"><img src="//placehold.it/600x350/777" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 9"><img src="//placehold.it/600x350/992233" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 10"><img src="//placehold.it/600x350/EEE" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 11"><img src="//placehold.it/600x350/449955/FFF" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 12"><img src="//placehold.it/600x350/DDD" class="thumbnail img-responsive"></a></div>
-      <div class="col-lg-3 col-sm-4 col-6"><a href="#" title="Image 13"><img src="//placehold.it/600x350/992233" class="thumbnail img-responsive"></a></div>
-    </div>
-    <hr>
-    <a href="http://bootply.com/71401">Edit on Bootply</a>
-    <hr>
+      <div class="col-xs-12">
+      <h2>Event Name</h2>
+      </div>
   </div>
+  <div class="row" ng-controller="galleryCntrl">
+    <div class="col-xs-12">
+      <div class="thumbnail col-xs-6 col-sm-4 col-lg-3 no-padding thumb" ng-repeat="thumb in thumbs" ng-controller="galleryCntrl" ng-init="addDiv(thumb)"> 
+        <a ng-click="openLightboxModal($index,thumb)" style="position:relative;">
+            <img ng-src="{{thumb.image}}" alt="{{thumb.name}}" class="thumbnail img-responsive" id="$index"  />
+        </a>
+      </div>
+    </div>
+  </div>   
 </div>
-<div id="myModal" class="modal fade" tabindex="-1" role="dialog">
+<div class="modal" id="myModal" role="dialog">
   <div class="modal-dialog">
   <div class="modal-content">
   <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal">×</button>
-    <h3 class="modal-title">Heading</h3>
+    <button class="close" type="button" data-dismiss="modal">×</button>
+    <h3 class="modal-title"></h3>
   </div>
   <div class="modal-body">
-    
+    <div id="modalCarousel" class="carousel"> 
+          <div class="carousel-inner">
+          </div>
+          <a class="carousel-control left" href="#modalCarousel" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+          <a class="carousel-control right" href="#modalCarousel" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+        </div>
   </div>
   <div class="modal-footer">
     <button class="btn btn-default" data-dismiss="modal">Close</button>
@@ -36,13 +35,3 @@
    </div>
   </div>
 </div>
-<!-- <script>
-  $('.thumbnail').click(function(){
-    $('.modal-body').empty();
-    var title = $(this).parent('a').attr("title");
-    $('.modal-title').html(title);
-    $($(this).parents('div').html()).appendTo('.modal-body');
-    $('#myModal').modal({show:true});
-});
-</script> -->
-
