Checking Google Analytics

--- a/index.html
+++ b/index.html
@@ -121,5 +121,17 @@
 		</footer>
 		<script src="assets/js/require.js" data-main="assets/js/lib/main.js"></script>
 		<script src="assets/js/common_utils.js"></script>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114034719-1"></script>
+
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-114034719-1');
+		</script>
+
   </body>
 </html>
