--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 		<meta name="description" content="">
 		<meta name="author" content="">
+		<meta name="google-site-verification" content="zW_9A217x0zTMEGg8nUZiQhVzCb03klv1rO3YADReJo" />		
 		<title>Art Event</title>
 
 		<link href="assets/css/footer.css" rel="stylesheet">
@@ -47,7 +48,7 @@
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<!-- End Google Tag Manager (noscript) -->		
 		<div id="preloader"></div>
-		
+
 		<nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
 			<div class="container" style="width: 100% !important;">
 				<div class="navbar-header">
