--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<meta name="google-site-verification" content="zW_9A217x0zTMEGg8nUZiQhVzCb03klv1rO3YADReJo" />		
 		<title>Art Event</title>
 
 		<link href="assets/css/footer.css" rel="stylesheet">
@@ -22,6 +21,8 @@
 		<link href="assets/css/plans.css" rel="stylesheet">
 		<link href="assets/css/gallery.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="assets/css/login.css">
+
+		<link rel="stylesheet" type="text/css" href="assets/css/lib/DataTables/datatables.min.css">
 
 		<script src="assets/js/lib/jquery/jquery.js"></script>
 
@@ -124,5 +125,5 @@
 		</footer>
 		<script src="assets/js/require.js" data-main="assets/js/lib/main.js"></script>
 		<script src="assets/js/common_utils.js"></script>
-  </body>
+	</body>
 </html>
